# ludo-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
constants/: cluster.yaml
contracts/: README.md
docs/CRIE/: 001_modules_decide_wizard.md
libs/ludo_shared/: __init__.py  _generated.py  sse.py
src/omg/: __init__.py  _ui.py  client.py  config.py  decide.py  main.py  wizard.py
tests/: test_client_retry.py  test_decide_cli.py  test_wizard.py  test_write_commands.py
