[project]
name = "omg"
version = "0.0.1"
description = "omg — transport-only CLI client for LUDO Odoo migrations"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ashant Chalasani", email = "ach@runludo.com" }]
# Public deps only — NO private engine packages. The CLI is a network client.
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.9",
    "pydantic>=2.8",
]

[project.scripts]
omg = "omg.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omg", "libs/ludo_shared"]  # vendored canonical shared package (from euroblaze/agentix)

[dependency-groups]
dev = ["ruff>=0.8", "mypy>=1.13"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["libs"]  # vendored canonical (ludo_shared) — linted at the hub, not here

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "libs"  # resolve the vendored `ludo_shared` package
